--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Sapong Tree Felling</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            
+        </nav>
+    </header>
 </body>
 </html>
